# bare_metal_deque

./: Cargo.toml  LICENCE-MIT.md  LICENSE-Apache.md  README.md
src/: lib.rs
